# teraflopai-data

./: README.md  pyproject.toml
examples/image/: blur_score.py  caption_image.py  watermark_image.py
examples/pipeline/: test_pipeline_text.py
examples/text/: classify_text.py  embed_text.py
src/teraflopai_data/: pipeline.py
src/teraflopai_data/clients/: ray.py  ray_client.py
src/teraflopai_data/components/: base.py  distributed_base.py
src/teraflopai_data/components/image/: blur.py  caption.py  image_hashing.py  nsfw.py  watermark.py
src/teraflopai_data/components/text/: embedding.py  fineweb_edu.py
src/teraflopai_data/models/: owl_watermark.py
tests/image/: image_hashes.py  nsfw_image.py
tests/pipeline/: test_pipeline_image.py
