[project]
name = "teraflopai-data"
version = "0.1.0"
description = "A petabyte scale data processing framework for AI models using Ray."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Teraflop AI", email = "enrico@teraflop.ai"},
]
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ray[data]>=2.47.1",
    "transformers>=4.53.2",
]
[project.optional-dependencies]
text = [
    "warcio>=1.7.5",
    "trafilatura>=2.0.0",
    "chonkie>=1.1.0",
    "sentence-transformers>=5.0.0",
    "vllm>=0.9.2",
]
audio = [
    "silero-vad>=5.1.2",
]
video = [
    "scenedetect>=0.6.6",
]
image = [
    "vllm>=0.9.2",
    "warcio>=1.7.5",
]
all = [
    "teraflopai-data[text,audio,video,image]",  # Reference other extras
]
